--- a/Calculator/app/src/main/res/layout/activity_calculator.xml
+++ b/Calculator/app/src/main/res/layout/activity_calculator.xml
@@ -1,136 +1,182 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.fabian.calculator.Calculator">
-
-    <Button
-        android:id="@+id/button6"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:text="6"
-        tools:layout_editor_absoluteX="176dp"
-        tools:layout_editor_absoluteY="255dp" />
+    android:layout_height="match_parent">
 
     <Button
         android:id="@+id/buttonDivide"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="80dip"
+        android:layout_height="80dip"
         android:text="/"
-        tools:layout_editor_absoluteX="288dp"
-        tools:layout_editor_absoluteY="415dp" />
-
-    <Button
-        android:id="@+id/buttonC"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:text="C"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="415dp" />
-
-    <Button
-        android:id="@+id/button0"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:text="0"
-        tools:layout_editor_absoluteX="96dp"
-        tools:layout_editor_absoluteY="415dp" />
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp" />
 
     <Button
         android:id="@+id/buttonMultiply"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="80dip"
+        android:layout_height="80dip"
         android:text="*"
-        tools:layout_editor_absoluteX="288dp"
-        tools:layout_editor_absoluteY="335dp" />
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/buttonDivide" />
 
     <Button
-        android:id="@+id/buttonMinus"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:text="-"
-        tools:layout_editor_absoluteX="288dp"
-        tools:layout_editor_absoluteY="255dp" />
+        android:id="@+id/buttonPlus"
+        android:layout_width="80dip"
+        android:layout_height="80dip"
+        android:layout_marginBottom="9dp"
+        android:layout_marginRight="8dp"
+        android:text="+"
+        app:layout_constraintBottom_toTopOf="@+id/buttonMinus"
+        app:layout_constraintRight_toRightOf="parent" />
+
+    <TextView
+        android:id="@+id/numberView"
+        android:layout_width="366dp"
+        android:layout_height="137dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/button3"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/buttonEqual"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:text="="
-        tools:layout_editor_absoluteX="176dp"
-        tools:layout_editor_absoluteY="415dp" />
+        android:id="@+id/buttonC"
+        android:layout_width="80dip"
+        android:layout_height="80dip"
+        android:text="C"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp" />
 
     <Button
-        android:id="@+id/button8"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:text="8"
-        tools:layout_editor_absoluteX="96dp"
-        tools:layout_editor_absoluteY="335dp" />
+        android:id="@+id/button0"
+        android:layout_width="80dip"
+        android:layout_height="80dip"
+        android:text="0"
+        app:layout_constraintLeft_toRightOf="@+id/buttonC"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp" />
 
     <Button
         android:id="@+id/button7"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="80dip"
+        android:layout_height="80dip"
         android:text="7"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="335dp" />
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/buttonC" />
 
     <Button
-        android:id="@+id/button5"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:text="5"
-        tools:layout_editor_absoluteX="96dp"
-        tools:layout_editor_absoluteY="255dp" />
+        android:id="@+id/button8"
+        android:layout_width="80dip"
+        android:layout_height="80dip"
+        android:text="8"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/button0"
+        app:layout_constraintLeft_toRightOf="@+id/button7"
+        android:layout_marginLeft="8dp" />
 
     <Button
-        android:id="@+id/button9"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:text="9"
-        tools:layout_editor_absoluteX="176dp"
-        tools:layout_editor_absoluteY="335dp" />
+        android:id="@+id/buttonMinus"
+        android:layout_width="80dip"
+        android:layout_height="80dip"
+        android:text="-"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/buttonMultiply" />
 
     <Button
         android:id="@+id/button4"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:text="4"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="255dp" />
-
-    <Button
-        android:id="@+id/buttonPlus"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:text="+"
-        tools:layout_editor_absoluteX="288dp"
-        tools:layout_editor_absoluteY="175dp" />
-
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:text="3"
-        tools:layout_editor_absoluteX="176dp"
-        tools:layout_editor_absoluteY="175dp" />
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:text="2"
-        tools:layout_editor_absoluteX="96dp"
-        tools:layout_editor_absoluteY="175dp" />
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/button7" />
 
     <Button
         android:id="@+id/button1"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:text="1"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="175dp" />
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/button4"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <Button
+        android:id="@+id/buttonEqual"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:text="="
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintLeft_toRightOf="@+id/button0"
+        android:layout_marginLeft="8dp" />
+
+    <Button
+        android:id="@+id/button9"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:text="9"
+        app:layout_constraintLeft_toRightOf="@+id/button8"
+        android:layout_marginLeft="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/buttonEqual" />
+
+    <Button
+        android:id="@+id/button6"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:text="6"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/button9"
+        app:layout_constraintLeft_toRightOf="@+id/button5"
+        android:layout_marginLeft="8dp" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:text="3"
+        android:layout_marginBottom="9dp"
+        app:layout_constraintBottom_toTopOf="@+id/button6"
+        app:layout_constraintLeft_toRightOf="@+id/button2"
+        android:layout_marginLeft="8dp" />
+
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:text="5"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/button8"
+        app:layout_constraintLeft_toRightOf="@+id/button4"
+        android:layout_marginLeft="8dp" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:text="2"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/button5"
+        app:layout_constraintLeft_toRightOf="@+id/button1"
+        android:layout_marginLeft="8dp" />
+
 </android.support.constraint.ConstraintLayout>
